--- a/css/style.css
+++ b/css/style.css
@@ -2,40 +2,9 @@
   box-sizing: border-box;
 }
 
-header {
-  max-width: 960px;
-  margin: 10px auto;
-  padding: 10px;
-  position: relative;
-  border: 1px solid black;
-  background: aqua;
-}
-
-.main {
-  max-width: 960px;
-  margin: 0 auto;
-  position: relative;
-  height: 500px;
-  border: 1px solid black;
-  padding: 20px;
-  background: silver;
-}
-
 body {
-  font-family: 'Space Mono', monospace;
+  /*font-family: 'Space Mono', monospace;*/
   background: pink;
-}
-
-h1, h2 {
-  text-align: center;
-}
-
-li {
-  display: inline-block;
-  border: 1px solid black;
-  margin: 20px;
-  padding: 40px;
-  background: violet;
 }
 footer {
   max-width: 960px;
@@ -47,7 +16,52 @@ footer {
   border: 1px solid black;
   clear: both;
 }
-
+h1, h2 {
+  text-align: center;
+}
+li {
+  display: inline-block;
+  border: 1px solid black;
+  margin: 20px;
+  padding: 40px;
+  background: violet;
+}
+header {
+  max-width: 960px;
+  margin: 10px auto;
+  padding: 10px;
+  position: relative;
+  border: 1px solid black;
+  background: aqua;
+}
+.main {
+  max-width: 960px;
+  margin: 0 auto;
+  position: relative;
+  height: 400px;
+  border: 1px solid black;
+  padding: 20px;
+  background: silver;
+  text-align: center;
+}
+.lineName {
+  text-align: left;
+  font-weight: bold;
+}
+.reset {
+  margin: 20px;
+  padding: 10px;
+}
+.tubeLine {
+  border: 1px solid black;
+  background: white;
+  margin: 10px;
+}
+/*have downloaded the font & included in css folder - how to link to font?*/
+@font-face {
+   font-family: londonTube;
+   src: url(London-Tube.ttf);
+}
 
 /* need to include set up for responsive here*/
 @media only screen and (max-width: 960px) {
