--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
 }
 
 body {
-  background: #EFF6FD;
+  /*background: #EFF6FD;*/
+  background-image: url(http://creativecrunk.com/wp-content/uploads/2014/11/London-Underground-logo.png);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 footer {
   max-width: 960px;
@@ -40,17 +43,27 @@ header {
   border-radius: 5px;
   background: #1A5A92;
 }
+button {
+  margin: 20px;
+  padding: 10px;
+  font-family: 'Raleway', sans-serif;
+  border: 2px solid #CCCCCC;
+  background: #EFF6FD;
+  border-radius: 5px;
+}
 .main {
   max-width: 960px;
   height: 400px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #CCCCCC;
+  border: 4px solid #CCCCCC;
   border-radius: 5px;
   position: relative;
   background: #F7F7F7;
+  opacity: 0.9;
   text-align: center;
   font-family: 'Raleway', sans-serif;
+  overflow: auto;
 }
 .lineName {
   text-align: left;
@@ -71,11 +84,19 @@ header {
   background: red;
 }
 
+/* neeed to work out how to position timer and score elements better on the page*/
 #timer {
   position: absolute;
   bottom: 0;
   left: 10;
 }
+
+#score {
+  position: absolute;
+  bottom: 5;
+  left: 10;
+}
+
 /*have downloaded the font & included in css folder - how to link to font?*/
 /*@font-face {
     font-family: "London Tube";*/
