--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,10 @@ button {
   color: #0019a8;
   border: 2px solid #0019a8;
 }
+/*#tubeImage {
+  width: 100%;
+  height: 100%;
+}*/
 
 #timer {
   position: absolute;
@@ -156,7 +160,7 @@ button {
   text-align: center;
   color: #2D3039;
 }
-
+/*resizes the logo*/
 img {
   height: 20%;
   width: 20%;
